fixed bug where share widget would not overlap images

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -552,6 +552,8 @@ aside.comments-template{
 	color:#FFF;
 	padding:10px;
 	width:120px;
+	position: relative;
+	z-index: 1;
 	i{
 		display:inline-block;
 		width:20px;
